Fix block alignment for communication template

--- a/themes/shiro/assets/src/sass/blocks/_core-column.scss
+++ b/themes/shiro/assets/src/sass/blocks/_core-column.scss
@@ -1,7 +1,9 @@
 .wp-block-column {
 	> .contact:only-child,
 	> .wp-block-group:only-child,
-	> .wp-block-group:only-child .wp-block-group__inner-container {
+	> .wp-block-group:only-child .wp-block-group__inner-container,
+	> form[action*=subscribe]:only-child,
+	> form[action*=subscribe]:only-child > .mailchimp-subscribe {
 		height: 100%;
 	}
 
